# dsvchc

./: .gitignore  Cargo.toml  README.md
plugin/include/: dsvchc-plugin.h
plugin/rdsvchc/: .gitignore  Cargo.toml
plugin/rdsvchc/src/: lib.rs
plugin/sample/: .gitignore  CMakeLists.txt  sample.c
src/: main.rs
src/config/: mod.rs
src/plugins/: mod.rs
src/server/: mod.rs
