[package]
name = "dsvchc"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
dlopen = { version = "0.1" }
dlopen_derive = { version = "0.1" }
tiny_http = { version = "0.12.0" }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.119", features = ["raw_value"] }
serde_yaml = { version = "0.9.33" }
signal-hook = { version = "0.3.17" }
